[package]
name = "advent-of-code-2018"
version = "0.0.1"
authors = ["Mike Dodd <mike@superdodd.com>"]
edition = "2018"

[dependencies]
aoc-runner = "0.2.2"
aoc-runner-derive = "0.2.2"
fnv = "1.0.6"
chrono = "0.4.6"
petgraph = "0.4.13"
num-traits = "0.2"
num-derive = "0.2"
regex = "1"
lazy_static = "1.2.0"

[profile.release]
debug = true